// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Common/NavLink Active Inverted Nav Link 1`] = `
.emotion-0 {
  background: brand.800;
  padding: 4px;
}

.emotion-1 {
  text-transform: uppercase;
  border-bottom: 2px;
  border-color: white;
  color: white;
  font-size: md;
}

.emotion-1:hover,
.emotion-1[data-hover] {
  border-color: white;
}

<div
  className="emotion-0"
>
  <a
    className="chakra-link emotion-1"
    rel="noopener noreferrer"
  >
    Example link
  </a>
</div>
`;

exports[`Storyshots Common/NavLink Active Nav Link 1`] = `
.emotion-0 {
  text-transform: uppercase;
  border-bottom: 2px;
  border-color: brand.800;
  color: gray.700;
  font-size: md;
}

.emotion-0:hover,
.emotion-0[data-hover] {
  border-color: brand.800;
}

<a
  className="chakra-link emotion-0"
  rel="noopener noreferrer"
>
  Example link
</a>
`;

exports[`Storyshots Common/NavLink Inactive Inverted Nav Link 1`] = `
.emotion-0 {
  background: brand.800;
  padding: 4px;
}

.emotion-1 {
  text-transform: uppercase;
  border-bottom: 2px;
  border-color: transparent;
  color: white;
  font-size: md;
}

.emotion-1:hover,
.emotion-1[data-hover] {
  border-color: white;
}

<div
  className="emotion-0"
>
  <a
    className="chakra-link emotion-1"
    rel="noopener noreferrer"
  >
    Example link
  </a>
</div>
`;

exports[`Storyshots Common/NavLink Inactive Nav Link 1`] = `
.emotion-0 {
  text-transform: uppercase;
  border-bottom: 2px;
  border-color: transparent;
  color: gray.700;
  font-size: md;
}

.emotion-0:hover,
.emotion-0[data-hover] {
  border-color: brand.800;
}

<a
  className="chakra-link emotion-0"
  rel="noopener noreferrer"
>
  Example link
</a>
`;

exports[`Storyshots Common/NavLink NavLink 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-0>*:not(style)~*:not(style) {
  margin-top: 0.5rem;
  -webkit-margin-end: 0px;
  margin-inline-end: 0px;
  margin-bottom: 0px;
  -webkit-margin-start: 0px;
  margin-inline-start: 0px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 4px;
}

.emotion-1>*:not(style)~*:not(style) {
  margin-top: 0px;
  -webkit-margin-end: 0px;
  margin-inline-end: 0px;
  margin-bottom: 0px;
  -webkit-margin-start: 0.5rem;
  margin-inline-start: 0.5rem;
}

.emotion-2 {
  text-transform: uppercase;
  border-bottom: 2px;
  border-color: transparent;
  color: gray.700;
  font-size: md;
}

.emotion-2:hover,
.emotion-2[data-hover] {
  border-color: brand.800;
}

.emotion-3 {
  text-transform: uppercase;
  border-bottom: 2px;
  border-color: brand.800;
  color: gray.700;
  font-size: md;
}

.emotion-3:hover,
.emotion-3[data-hover] {
  border-color: brand.800;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background: brand.800;
  padding: 4px;
}

.emotion-4>*:not(style)~*:not(style) {
  margin-top: 0px;
  -webkit-margin-end: 0px;
  margin-inline-end: 0px;
  margin-bottom: 0px;
  -webkit-margin-start: 0.5rem;
  margin-inline-start: 0.5rem;
}

.emotion-5 {
  text-transform: uppercase;
  border-bottom: 2px;
  border-color: transparent;
  color: white;
  font-size: md;
}

.emotion-5:hover,
.emotion-5[data-hover] {
  border-color: white;
}

.emotion-6 {
  text-transform: uppercase;
  border-bottom: 2px;
  border-color: white;
  color: white;
  font-size: md;
}

.emotion-6:hover,
.emotion-6[data-hover] {
  border-color: white;
}

<div
  className="chakra-stack emotion-0"
>
  <div
    className="chakra-stack emotion-1"
  >
    <a
      className="chakra-link emotion-2"
      rel="noopener noreferrer"
    >
      Not active
    </a>
    <a
      className="chakra-link emotion-3"
      rel="noopener noreferrer"
    >
      Very active
    </a>
  </div>
  <div
    className="chakra-stack emotion-4"
  >
    <a
      className="chakra-link emotion-5"
      rel="noopener noreferrer"
    >
      Not active
    </a>
    <a
      className="chakra-link emotion-6"
      rel="noopener noreferrer"
    >
      Very active
    </a>
  </div>
</div>
`;
